feat: TestScene gitignore 추가

--- a/.gitignore
+++ b/.gitignore
@@ -608,6 +608,8 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 
+
+TestScene.*
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
